@@ -50,7 +50,6 @@ main(int argc, char **argv)
 	ldns_rdf *last_owner;
 	ldns_rr  *last_rr;
 	ldns_rr  *pop_rr;
-	ldns_status s;
 
 	progname = strdup(argv[0]);
 	origin = NULL;
@@ -90,7 +89,7 @@ main(int argc, char **argv)
 			exit(EXIT_FAILURE);
 		}
 		
-		if ((ldns_zone_new_frm_fp(&z, fp, origin, 0, 0)) != LDNS_STATUS_OK) {
+		if (ldns_zone_new_frm_fp(&z, fp, origin, 0, 0) != LDNS_STATUS_OK) {
 			fprintf(stderr, "Zone file %s could not be parsed correctly\n", argv[i]);
 			exit(EXIT_FAILURE);
 		}
